# testapp-fastapi

./: Dockerfile  LICENSE  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci_tests.yml
